committing pending changes (from aeneid.citedloci.org)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <html>
-  <title>Aeneid in JSTOR</title>
+  <title>Cited Loci :: Aeneid</title>
   <head>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script> 
@@ -9,17 +9,17 @@
     <!-- Piwik -->
     <script type="text/javascript">
       var _paq = _paq || [];
+      /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
       _paq.push(['trackPageView']);
       _paq.push(['enableLinkTracking']);
       (function() {
-        var u="//piwik.dainst.org/";
+        var u="https://piwik.dainst.org/";
         _paq.push(['setTrackerUrl', u+'piwik.php']);
         _paq.push(['setSiteId', '9']);
         var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
         g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
       })();
     </script>
-    <noscript><p><img src="//piwik.dainst.org/piwik.php?idsite=9" style="border:0;" alt="" /></p></noscript>
     <!-- End Piwik Code -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="bower_components/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
@@ -84,7 +84,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><em>Aeneid</em> in JSTOR</a>
+          <a class="navbar-brand" href="/">Cited Loci :: Aeneid</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -97,12 +97,12 @@
     </nav>
     <div class="jumbotron">
       <div class="container">
-        <h1><em>Aeneid</em> in JSTOR</h1>
+        <h1>Cited Loci of the <em>Aeneid</em></h1>
         <p>
           It's a proof of concept of how next-generation tools for retrieving bibliographic information could look like.
         </p>
         <p>
-          Try it out to find articles in JSTOR that quote or refer to specific passages of Vergil's <em>Aeneid</em>.
+          Try it out to find articles in JSTOR that quote or refer to specific passages of Virgil's <em>Aeneid</em>.
         </p>
         <p>
           +11k quotations, +12k references and +5.7k JSTOR articles made searchable trough an intuitive interface. 
@@ -131,7 +131,7 @@
           <img src="imgs/results.png" class="img-responsive" alt="Responsive image">
           <br/>
           <p>
-            Matching articles from JSTOR are shown on the right-hand panel, together with the snippet of text where the quotation/reference was found and link to the article in JSTOR. The results can be filtered so as to show only article with either quotations of or references to the Vergilian text. 
+            Matching articles from JSTOR are shown on the right-hand panel, together with the snippet of text where the quotation/reference was found and link to the article in JSTOR. The results can be filtered so as to show only article with either quotations of or references to the Virgilian text. 
           </p>
           <p><a class="btn btn-secondary" href="about" role="button">Read more</a></p>
        </div>
