--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <html>
-  <title>Aeneid in JSTOR</title>
+  <title>Cited Loci :: Aeneid</title>
   <head>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script> 
@@ -9,17 +9,17 @@
     <!-- Piwik -->
     <script type="text/javascript">
       var _paq = _paq || [];
+      /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
       _paq.push(['trackPageView']);
       _paq.push(['enableLinkTracking']);
       (function() {
-        var u="//piwik.dainst.org/";
+        var u="https://piwik.dainst.org/";
         _paq.push(['setTrackerUrl', u+'piwik.php']);
         _paq.push(['setSiteId', '9']);
         var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
         g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
       })();
     </script>
-    <noscript><p><img src="//piwik.dainst.org/piwik.php?idsite=9" style="border:0;" alt="" /></p></noscript>
     <!-- End Piwik Code -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="bower_components/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
@@ -105,7 +105,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><em>Aeneid</em> in JSTOR</a>
+          <a class="navbar-brand" href="/">Cited Loci :: Aeneid</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -120,7 +120,7 @@
     <div class="container" style="margin-top: 70px">
       <div class="col-md-10 col-md-offset-1">
       <h3>Credits</h3>
-      <p><em>Aeneid in JSTOR</em> has been developed by <a target="_blank" href="https://orcid.org/0000-0002-7406-6286">Matteo Romanello</a>, and it was born out of an online conversation with Ronald Snyder (JSTOR Labs), Neil Coffee, Chris Forstall, Caitlin Diddams and James Gawley &mdash; the <a target="_blank" href="http://tesserae.caset.buffalo.edu/">Tesserae team</a>.
+      <p><em>Cited Loci of the Aeneid</em> has been developed by <a target="_blank" href="https://orcid.org/0000-0002-7406-6286">Matteo Romanello</a>, and it was born out of an online conversation with Ronald Snyder (JSTOR Labs), Neil Coffee, Chris Forstall, Caitlin Diddams and James Gawley &mdash; the <a target="_blank" href="http://tesserae.caset.buffalo.edu/">Tesserae team</a>.
       </p>
       <p>
       Thanks also to Dario Rodighiero and Michele Pasin for their precious advices on the visualization side of things!
@@ -141,7 +141,7 @@
         If you want to get &mdash; e.g. to discuss potential collaborations &mdash; drop a line to <code>matteo dot romanello at gmail dot com</code>.
       </p>
       <!-- FAQ -->
-      <div>
+      <div id="faq">
         <h3>FAQ</h3>
         <div class="panel-group" id="accordion-faq">
             <!-- Question 6 -->
@@ -171,7 +171,8 @@
               </div>
               <div class="panel-collapse collapse" id="reply_3">
                 <div class="panel-body">
-                  <p>This was done automatically by using software developed by Matteo Romanello. For a description of how it works see <a target="_blank" href="http://www.digitalhumanities.org/dhq/vol/10/2/000255/000255.html">this recent paper</a> or his <a target="_blank" href="http://hdl.handle.net/11858/00-1780-0000-002A-4537-A">PhD dissertation</a>.</p>
+                  <p>This was done automatically by using software developed by Matteo Romanello. For a description of how it works see <a target="_blank" href="http://www.digitalhumanities.org/dhq/vol/10/2/000255/000255.html">this recent paper</a> or his <a target="_blank" href="http://hdl.handle.net/11858/00-1780-0000-002A-4537-A">PhD dissertation</a>. For the broader context of this proof-of-concept see the  <a href="https://www.researchgate.net/project/Cited-Loci" target="_blank">Cited Loci project</a>.
+                  </p>
                 </div>
               </div>
           </div>
@@ -229,13 +230,15 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion-faq" href="#reply_2">
-                    Why a paywalled resource like JSTOR?
+                    Why working with JSTOR data?
                   </a>
                 </h4>
               </div>
               <div class="panel-collapse collapse" id="reply_2">
                 <div class="panel-body">
-                  <p>Despite not being an openly available resource, JSTOR is currently the most comprehensive digital archive of journal articles that we can actually mine. Although there are a lot of Open Access electronic journals out there (see e.g. <a target="_blank" href="http://isaw.nyu.edu/publications/awol-index/">the AWOL Index</a>), it's not yet possible to process their context without (a lot of) additional work.</p>
+                  <p>
+                    The not-for-profit digital library JSTOR is currently the most comprehensive archive of journal articles that one can start mining right away. Although there are many Classics open access journals out there (see the <a target="_blank" href="http://isaw.nyu.edu/publications/awol-index/">the AWOL Index</a>, for a comprehensive list), processing all of their contents would require a substantial amount of additional work (e.g. gathering of article-level metadata, scraping of full-text from web pages or online PDFs, etc.). Instead, JSTOR makes its materials accessible to researchers for research purposes under the <a target="_blank" href="https://dfr.jstor.org/">Data for Research</a> scheme -- the same scheme that has made possible the creation of the Aeneid in JSTOR. If you need access to JSTOR, see <a target="_blank" href="https://www.jstor.org/institutionSearch">this list of participating institutions</a>, and try the <a target="_blank" href="https://support.jstor.org/products-for-independent-scholars/2016/9/9/register-and-read">free Register &amp; Read for individuals</a>.
+                  </p>
                 </div>
               </div>
           </div>
