--- a/explore.html
+++ b/explore.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <html>
-  <title>Aeneid in JSTOR</title>
+  <title>Cited Loci :: Aeneid</title>
   <head>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/d3/d3.js"></script>
@@ -10,17 +10,17 @@
     <!-- Piwik -->
     <script type="text/javascript">
       var _paq = _paq || [];
+      /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
       _paq.push(['trackPageView']);
       _paq.push(['enableLinkTracking']);
       (function() {
-        var u="//piwik.dainst.org/";
+        var u="https://piwik.dainst.org/";
         _paq.push(['setTrackerUrl', u+'piwik.php']);
         _paq.push(['setSiteId', '9']);
         var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
         g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
       })();
     </script>
-    <noscript><p><img src="//piwik.dainst.org/piwik.php?idsite=9" style="border:0;" alt="" /></p></noscript>
     <!-- End Piwik Code -->
     <script src="bower_components/mustache.js/mustache.js"></script>
     <script src="bower_components/d3-tip/index.js"></script>
@@ -210,7 +210,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><em>Aeneid</em> in JSTOR</a>
+          <a class="navbar-brand" href="/">Cited Loci :: Aeneid</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
